--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "auto-note"
+name = "kalosm-chat"
 version = "0.1.0"
 authors = ["Evan Almloff <evanalmloff@gmail.com>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
@@ -12,7 +10,7 @@ dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus" }
 dioxus-router = { git = "https://github.com/DioxusLabs/dioxus" }
 dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus" }
 
-kalosm = "0.1.0"
+kalosm = { git = "https://github.com/floneum/floneum" }
 
 [profile.release]
 lto = true
