--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 [dependencies]
 comrak = "0.33.0"
 dioxus = { version = "0.6", features = ["desktop", "router"] }
-kalosm = { git = "https://github.com/floneum/floneum", features = ["language"], rev = "2ccc8b1fed0acfe63e89addcc93eb4026410e518" }
+kalosm = { git = "https://github.com/floneum/floneum", features = ["language"], rev = "c10046e" }
+reqwest = "0.12.12"
 
 [features]
 metal = ["kalosm/metal"]
