multi platform support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,20 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.7.0-alpha.3", features = ["router"] }
+kalosm = { version = "0.4.0", default-features = false}
 
-# Only include native feature when targeting iOS
-[target.'cfg(target_os = "ios")'.dependencies.dioxus]
+# Only include native feature for iOS and macOS
+[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies.dioxus]
 version = "0.7.0-alpha.3"
 features = [
     "router",
-    # "native",
+     "native",
     ]
     
-# iOS-specific dependencies
-[target.'cfg(target_os = "ios")'.dependencies]
+# iOS and macOS-specific dependencies
+[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
 metal = "0.32.0"
+kalosm = { version = "0.4.0", features = ["language","metal"] }
 
 [features]
 default = ["mobile"]
