--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+comrak = "0.40.0"
 dioxus = { version = "0.7.0-alpha.3", features = ["router"] }
 kalosm = { version = "0.4.0", default-features = false}
+serde = { version = "1.0.219", features = ["derive"] }
 
 # Only include native feature for iOS and macOS
 [target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies.dioxus]
