--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -5,7 +5,7 @@ name = "auto-note"
 [web.app]
 
 # HTML title tag content
-title = "kalosm-chat"
+title = "auto-note"
 
 # include `assets` in web platform
 [web.resource]
