--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,16 @@ edition = "2021"
 
 [dependencies]
 comrak = "0.33.0"
-dioxus = { version = "0.6", features = ["desktop", "router"] }
-kalosm = { git = "https://github.com/floneum/floneum", features = ["language"], rev = "c10046e" }
+dioxus = { version = "=0.7.0-alpha.3", features = ["desktop", "router"] }
 reqwest = "0.12.12"
 
+# Only include native feature for iOS and macOS
+[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
+dioxus = { version = "=0.7.0-alpha.3", features = ["desktop", "router", "native"] }
+kalosm = { version = "0.4.0", features = ["language","metal"] }
+
 [features]
-metal = ["kalosm/metal"]
+ metal = ["kalosm/metal"]
 
 [profile.release]
 lto = true
